# dev-jobs-bot

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
.vim/: coc-settings.json
src/: bot.py  env.example.py
src/messages/: msgs.py
src/msgs/: bot_msgs.py  msg_generator.py
src/services/: github_api.py
src/tests/: test_github_api.py
