[tool.poetry]
name = "dev-jobs-bot"
version = "0.1.0"
description = ""
authors = ["kaetaen <kaetaen@tutanota.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
pyTelegramBotAPI = "^3.7.4"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
jedi = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
